objects/Invoice_Royall__c.object
<CustomObject>
    <description>A log of scheduled invoices associated with a program package (Royall)</description>
    <fields>
        <fullName>Account_LOB_Type__c</fullName>
        <formula>Program_Package__r.Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account LOB Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SL__c</fullName>
        <formula>Program_Package__r.Account__r.r_Account_SL__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account SL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Gross_Invoice_Amount__c</fullName>
        <description>The gross amount actually invoiced. This includes postage.</description>
        <inlineHelpText>The gross amount actually invoiced. This includes postage.</inlineHelpText>
        <label>Actual Gross Invoice Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Invoice_Date__c</fullName>
        <description>Date an invoice was actually sent.</description>
        <inlineHelpText>Enter the date the invoice was actually sent.</inlineHelpText>
        <label>Actual Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is where you indicate the specific person you have been working with in order to collect this outstanding balance.</description>
        <inlineHelpText>Please note the person you have been working with in order to collect outstanding balance.</inlineHelpText>
        <label>Invoice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Program_Package_INVOICES_Royall</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Note__c</fullName>
        <description>Notes about a particular invoice.</description>
        <inlineHelpText>Notes about a particular invoice.</inlineHelpText>
        <label>Invoice Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoie_Delta__c</fullName>
        <formula>Scheduled_Gross_Invoice_Amount__c - Actual_Gross_Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Received__c</fullName>
        <description>Accounts Receivable field -- This field displays the DATE of the last payment paid towards an outstanding amount due on a specific Invoice.</description>
        <inlineHelpText>This is an Accounts Receivable field -- This field displays the DATE of the last payment paid towards an outstanding amount due on a specific Invoice.</inlineHelpText>
        <label>Last Payment Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance_Due__c</fullName>
        <description>Accounts Receivable field -- This field displays the outstanding amount due on a specific Invoice.</description>
        <inlineHelpText>This is an Accounts Receivable field -- This field displays the outstanding amount ($$$) due on a specific Invoice.</inlineHelpText>
        <label>Outstanding Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Package__c</fullName>
        <description>Identity of the program package being invoiced.</description>
        <inlineHelpText>This is the identity of the program package being invoiced.</inlineHelpText>
        <label>Program Package</label>
        <referenceTo>Program_Package__c</referenceTo>
        <relationshipName>Program_Package_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scheduled_Gross_Invoice_Amount__c</fullName>
        <description>The gross amount scheduled to be invoiced. This includes postage.</description>
        <inlineHelpText>The gross amount scheduled to be invoiced. This includes postage.</inlineHelpText>
        <label>Scheduled Gross Invoice Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scheduled_Invoice_Date__c</fullName>
        <description>Date an invoice is scheduled to be sent.</description>
        <inlineHelpText>Enter the date and invoice is scheduled to be sent.  This will be used to drive a report to notify Accounting of upcoming invoices.</inlineHelpText>
        <label>Scheduled Invoice Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Invoice (Royall)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>SF Invoice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices (Royall)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>